# LAMBA

./: .gitignore  README.md  README_es.md  docker-compose.yaml
Doumentation/: lamba_architecture.md  prd.md  readme-debug.md
backend/: API_DOCUMENTATION.md  activities_router.py  activities_service.py  admin_router.py  admin_service.py  config.py  course_service.py  database.py  db_models.py  document_extractor.py  env.example  evaluation_service.py  generate_ssl_cert.py  grade_service.py  grades_router.py  https_server.py  lamb_api_service.py  lti_service.py  main.py  models.py  moodle_service.py  pyproject.toml  requirements.txt  storage_service.py  submissions_router.py  user_service.py
backend/tests/: test_endpoints.py  test_functional.py
frontend/svelte-app/: .gitignore  package-lock.json  package.json  vitest.config.js
frontend/svelte-app/src/: app.css  app.html
frontend/svelte-app/src/lib/: admin.js  auth.js
frontend/svelte-app/src/lib/components/: ActivityForm.svelte  AdminNav.svelte  DataTable.svelte  LanguageSelector.svelte  Markdown.svelte  Nav.svelte
frontend/svelte-app/src/lib/i18n/: formatters.js  index.js
frontend/svelte-app/src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.js  +page.svelte
frontend/svelte-app/src/routes/admin/: +layout.svelte  +page.svelte
frontend/svelte-app/src/tests/: setup.js
frontend/svelte-app/src/tests/integration/: api.test.js
frontend/svelte-app/src/tests/lib/: auth.test.js  formatters.test.js  i18n.test.js
frontend/svelte-app/static/: config.example.js
(+15 files in other folders)
